# wipe

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE-SETUP.md  SECURITY.md  dist-workspace.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-web.yml  publish-npm.yml  release-plz.yml  release.yml
apps/desktop/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts  transitions.ts  types.ts  utils.ts
apps/desktop/src/lib/components/: AssigneePicker.svelte  Attachments.svelte  Avatar.svelte  Board.svelte  BoardSettings.svelte  Card.svelte  CardMenu.svelte  ChecksSection.svelte  Column.svelte  Forum.svelte  ForumPost.svelte  GitGraph.svelte  HistoryBar.svelte  LabelPicker.svelte  LocalChecks.svelte  Markdown.svelte  NewTicketDialog.svelte  ProjectSwitcher.svelte  ThemeToggle.svelte  TicketCard.svelte  TicketDrawer.svelte  TicketModal.svelte  TimeMachine.svelte  TrashZone.svelte
apps/desktop/src/lib/components/ui/: Badge.svelte  Button.svelte  Chip.svelte  Dialog.svelte  Input.svelte  Popover.svelte  Textarea.svelte
apps/desktop/src/lib/stores/: board.ts  theme.ts
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
apps/web/src/: index.css  main.tsx
apps/web/src/components/: CodeBlock.tsx  CommandCard.tsx  Figure.tsx  Footer.tsx  Layout.tsx  Logo.tsx  Navbar.tsx  Reveal.tsx  ThemeToggle.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: constants.ts  theme.ts  useInView.ts
apps/web/src/pages/: Docs.tsx  Landing.tsx  NotFound.tsx
apps/web/src/pages/docs/: Tabs.tsx  data.ts
crates/wipe-cli/: Cargo.toml
crates/wipe-cli/skills/: SKILL.md
crates/wipe-cli/src/: args.rs  autostart.rs  commands.rs  first_run.rs  forum_cmd.rs  identity.rs  main.rs  onboard.rs  output.rs  skills.rs  update_check.rs
crates/wipe-cli/tests/: cli.rs
crates/wipe-core/: CHANGELOG.md  Cargo.toml
crates/wipe-core/src/: config.rs  error.rs  forum.rs  git.rs  id.rs  inbox.rs  lib.rs  model.rs  ops.rs  registry.rs  store.rs  trash.rs  vcs.rs
crates/wipe-core/tests/: merge.rs
crates/wipe-daemon/: CHANGELOG.md  Cargo.toml
crates/wipe-daemon/assets/: .gitkeep  index.html
crates/wipe-daemon/assets/_app/: version.json
crates/wipe-daemon/assets/_app/immutable/assets/: 0.2XT1PxHk.css  2.1BJUlu2F.css  2.3rA97JA1.css  2.BFtFkZSW.css  2.BmuqoIdx.css  2.Bxs5_NTH.css  2.CbtQLGae.css  2.CncEYgV4.css  2.DEY_qEZx.css  2.DMMquLZI.css  2.TTNJ9ci6.css  2.ws4P96fK.css  2.z7MWoA-Z.css
crates/wipe-daemon/assets/_app/immutable/chunks/: 3PF7H-DK.js  4HW7zUW3.js  4iJ67tFU.js  6pFHu_xS.js  B-z8UFTW.js  B8BStk9p.js  B8GaMJIh.js  B9T8ewbg.js  BOJqYMSF.js  BTwJ2fuq.js  BXgD1Ey3.js  BZl4anQv.js  BnXR3dUY.js  C3SFIQj7.js  CCV60Ifa.js  CNwDWLHe.js  CPUml4XM.js  CkWetNlM.js  D3mickAQ.js  D5sEx3Ua.js  D83Ut1NK.js  DAXr7w4w.js  DCUEFvc9.js  DC_rcm2z.js  DH2gk7cq.js  DMoqUPUz.js  DXbvZtNV.js  DY8m9pRb.js  D_FK0tge.js  DaWPTlGa.js  DcOrAw1s.js  DfR1X-nR.js  DrL4Uav9.js  DvoGOm40.js  DxYDIOys.js  KNLEjRRr.js  MFdNDx1s.js  MUrPYSuT.js  aSDIrlDJ.js  eV2J6_b4.js  (+4 more)
crates/wipe-daemon/assets/_app/immutable/entry/: app.23oQeYaE.js  app.BH0wp1T6.js  app.BIRJACTD.js  app.BIuBc76y.js  app.BSG1md66.js  app.BeRL2216.js  app.BjCULYZr.js  app.C2EU8gmM.js  app.CeX1oOMC.js  app.CfvLqXSa.js  app.CiaC1fD6.js  app.Ctyz4eMw.js  app.D1-QD7Wv.js  app.D8kkVArX.js  app.QPmqyetn.js  app.SST6pB-U.js  app.V7puSR9Q.js  app.l49QkXni.js  app.pYVD6B6m.js  start.BJUfpYB1.js  start.BLyTfIva.js  start.BpxhtE-0.js  start.Bvsg26EF.js  start.C2KMOW9i.js  start.CH3Rpq6d.js  start.CJstvBaY.js  start.CUSef1lr.js  start.CadUeIkO.js  start.DhyJssOo.js  start.Dw_93H4k.js  start.Dzxaa44M.js  start.Fv6qx5sE.js  start.JHMTQcCs.js  start.L2M4a-wo.js  start.LjWZnWIL.js  start.V3Q5nuQB.js  start.WdU-2mtX.js  start.qsKMnKuF.js
crates/wipe-daemon/assets/_app/immutable/nodes/: 0.BD4mUEid.js  0.CSh00MG1.js  0.CX7vc5rl.js  0.P78VUpEK.js  0._CR89-y-.js  1.604isyGC.js  1.BD7rIRFw.js  1.BPjjq032.js  1.BaRJVvfI.js  1.Brycz2VQ.js  1.BtHXd-G3.js  1.C0We5ln8.js  1.CSdJkICw.js  1.CUlY7G2Q.js  1.CVhkG3Tm.js  1.Cb8hGUvq.js  1.Cbjdoyhr.js  1.D3aJfMb9.js  1.DLBtWpMv.js  1.DSIrX5hF.js  1.De3SVsDy.js  1.DhyrLmy6.js  1.DljEH_sj.js  1.Dok0wj-v.js  2.5BaqSsWb.js  2.BJBZtk6K.js  2.BRADsqeP.js  2.BjPNKNci.js  2.Bst-at3v.js  2.CHzw9uhr.js  2.CJCVGgJk.js  2.CXKbbr89.js  2.ChOLyDh1.js  2.D9PYs0fe.js  2.DGHjkntU.js  2.DK_urLED.js  2.Dbt7K3iX.js  2.K71azele.js  2.QbWZJBIl.js  2.Ruut-Qwf.js
crates/wipe-daemon/src/: api.rs  assets.rs  lib.rs  registry.rs  watch.rs
docs/: ARCHITECTURE.md  DESIGN.md  DOGFOOD-0.3.10.md  RELEASE.md
npm/: .npmignore  README.md  install.js  package.json
scripts/: embed-ui.ps1  embed-ui.sh  patch-npm-installer.mjs  set-version.mjs
skills/: SKILL.md
tests/agent-supervision/: README.md  run.ps1  run.sh  scenario.md
tests/mock-projects/: seed.ps1  seed.sh
