[workspace]
resolver = "2"
members = ["crates/wipe-core", "crates/wipe-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Bilal <bilal@bigitec.com>"]
rust-version = "1.80"
repository = "https://github.com/mflRevan/wipe"
homepage = "https://github.com/mflRevan/wipe"
keywords = ["cli", "kanban", "agents", "git", "collaboration"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

# Internal crates
wipe-core = { path = "crates/wipe-core" }

[profile.release]
lto = "thin"
strip = true
