[workspace]
resolver = "2"
members = ["crates/wipe-core", "crates/wipe-cli", "crates/wipe-daemon"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Aiman <aiman@shabib.net>"]
rust-version = "1.80"
repository = "https://github.com/mflRevan/wipe"
homepage = "https://wipeboard.dev"
keywords = ["cli", "kanban", "agents", "git", "collaboration"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

# Internal crates. `version` is required so they can be published to crates.io
# (path is used for local builds, version for the published dependency).
wipe-core = { path = "crates/wipe-core", version = "0.2.0" }
wipe-daemon = { path = "crates/wipe-daemon", version = "0.2.0" }

[profile.release]
lto = "thin"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
