[package]
name = "wipe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "wipe - CLI-first, git-native collaboration for humans and agents."

[[bin]]
name = "wipe"
path = "src/main.rs"

[dependencies]
wipe-core.workspace = true
wipe-daemon.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
owo-colors = { version = "4", features = ["supports-colors"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
inquire = "0.7"
directories = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
